src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/returnNonVoidType.deca
// Description:
//    Déclaration d'une méthode void qui renvoie un type non void
// Resultats:
//    Erreur contextuelle ligne 12
//     return non autorisé pour un returnType void
class A{

    int x;

    void setX(int y){
        x = y;
        return x;
    }
}
